--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"sentiment": "1.0.5",
 		"connect": "3.4.1",
 		"serve-static": "1.10.2",
-		"markov": "0.0.7"
+		"markov": "0.0.7",
+		"lokijs": "1.3" 
 	},
 	"engines": {
 		"node": ">= 4.0.0"
