--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-	"name": "Kid-A",
-	"version": "0.0.1",
-	"dependencies": {
-		"sugar": "1.4.1",
-		"websocket": "1.0.22",
-		"request": "2.67.0",
-		"sentiment": "1.0.5",
-		"connect": "3.4.1",
-		"serve-static": "1.10.2",
-		"markov": "0.0.7",
-		"lokijs": "1.3" 
-	},
-	"engines": {
-		"node": ">= 4.0.0"
-	},
-	"bin": "./main.js",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/bumbadadabum/Kid-A.git"
-	},
-	"author": {
-		"name": "Bär Halberkamp",
-		"email": "fledaway@gmail.com"
-	},
-	"private": true,
-	"license": "GPL3"
+  "name": "Kid-A",
+  "version": "0.0.1",
+  "dependencies": {
+    "sugar": "1.4.1",
+    "websocket": "1.0.22",
+    "request": "2.67.0",
+    "sentiment": "1.0.5",
+    "connect": "3.4.1",
+    "serve-static": "1.10.2",
+    "markov": "0.0.7",
+    "lokijs": "1.3"
+  },
+  "engines": {
+    "node": ">= 4.0.0"
+  },
+  "bin": "./main.js",
+  "scripts": {
+  	"test": "eslint *.js plugins/*.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bumbadadabum/Kid-A.git"
+  },
+  "author": {
+    "name": "Bär Halberkamp",
+    "email": "fledaway@gmail.com"
+  },
+  "private": true,
+  "license": "GPL3",
+  "devDependencies": {
+    "eslint": "^2.10.2",
+    "eslint-config-google": "^0.5.0"
+  }
 }
