--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
             "error",
             "always"
         ],
+        "no-case-declarations": 0,
 		"no-console": 0,
 		"no-empty": 0,
 		"no-extra-semi": 0
