--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,27 +8,82 @@
         "Handler": false, "consoleMsg": false, "output": false, "stdout": false, "Databases": false, "Connection": false,
         "pmMsg": false, "Settings": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false
 	},
-    "extends": "eslint:recommended",
     "parserOptions": {
+		"ecmaVersion": 6,
         "sourceType": "module"
     },
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": 0,
-        "semi": [
-            "error",
-            "always"
-        ],
-        "no-case-declarations": 0,
+		"comma-dangle": [1, "always-multiline"],
+		"no-cond-assign": [2, "except-parens"],
 		"no-console": 0,
-		"no-empty": 0,
-		"no-extra-semi": 0
+		"no-constant-condition": 1,
+		"no-control-regex": 0,
+		"no-debugger": 2,
+		"no-dupe-args": 2,
+		"no-dupe-keys": 2,
+		"no-duplicate-case": 2,
+		"no-empty": [2, {"allowEmptyCatch": true}],
+		"no-empty-character-class": 2,
+		"no-ex-assign": 2,
+		"no-extra-boolean-cast": 1,
+		"no-extra-parens": [1, "functions"],
+		"no-extra-semi": 2,
+		"no-func-assign": 2,
+		"no-inner-declarations": [1, "functions"],
+		"no-invalid-regexp": 2,
+		"no-irregular-whitespace": 1,
+		"no-negated-in-lhs": 1,
+		"no-obj-calls": 2,
+		"no-prototype-builtins": 0,
+		"no-regex-spaces": 1,
+		"no-sparse-arrays": 1,
+		"no-unexpected-multiline": 2,
+		"no-unreachable": 2,
+		"no-unsafe-finally": 1,
+		"use-isnan": 1,
+		"valid-jsdoc": 0,
+		"valid-typeof": 1,
+
+		"curly": [2, "multi-line", "consistent"],
+		"eqeqeq": [1, "smart"],
+		"no-case-declarations": 0,
+		"no-else-return": 1,
+		"no-fallthrough": 0,
+		"no-invalid-this": 1,
+		"no-multi-spaces": 2,
+		"no-octal": 1,
+		"no-redeclare": 2,
+		"no-self-assign": 1,
+		"no-with": 1,
+		"radix": [2, "as-needed"],
+		"yoda": 1,
+		"no-unused-vars": [1, {"args": "after-used"}],
+		"no-undef": [2, {"typeof": true}],
+		"no-use-before-define": [2, {"functions": false, "classes": false}],
+		"callback-return": 2,
+		"no-mixed-requires": 2,
+
+		"array-bracket-spacing": 2,
+		"brace-style": [2, "1tbs", {"allowSingleLine": true}],
+		"camelcase": 1,
+		"comma-spacing": 1,
+		"comma-style": 1,
+		"eol-last": 1,
+		"indent": [2, "tab"],
+        "linebreak-style": [2, "unix"],
+		"key-spacing": 1,
+		"no-lonely-if": 1,
+		"no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+		"no-trailing-spaces": 1,
+		"no-whitespace-before-property": 2,
+		"object-curly-spacing": [2, "never"],
+		"padded-blocks": [2, "never"],
+        "quotes": 0,
+        "semi": 2,
+		"semi-spacing": 2,
+
+		"arrow-spacing": 2,
+		"no-const-assign": 2,
+		"no-var": 1
     }
 }
