--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "request": "2.67.0",
     "sentiment": "1.0.5",
     "serve-static": "1.10.2",
-    "websocket": "1.0.22"
+    "websocket": "1.0.22",
+    "thunk-redis": "1.7.3"
   },
   "engines": {
     "node": ">= 4.0.0"
