--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "globals": {
 		"Config": false, "toId": false, "Tools": false, "errorMsg": false, "statusMsg": false,
         "Handler": false, "consoleMsg": false, "output": false, "stdout": false, "Connection": false,
-        "pmMsg": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false
+        "pmMsg": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false, "ChatLogger": false
 	},
     "parserOptions": {
 		"ecmaVersion": 8,
