--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,8 @@
 		"node": true
 	},
 	"globals": {
-		"Config": false, "toId": false, "Tools": false, "errorMsg": false, "statusMsg": false,
-		"Handler": false, "consoleMsg": false, "output": false, "stdout": false, "Connection": false,
-		"pmMsg": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false, "ChatLogger": false
+		"Config": false, "toId": false, "Tools": false, "errorMsg": false, "statusMsg": false, "Handler": false, "consoleMsg": false, "output": false,
+		"stdout": false, "Connection": false, "pmMsg": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false, "ChatLogger": false
 	},
 	"parserOptions": {
 		"ecmaVersion": 8,
@@ -22,7 +21,7 @@
 		"no-dupe-args": 2,
 		"no-dupe-keys": 2,
 		"no-duplicate-case": 2,
-		"no-empty": [2, {"allowEmptyCatch": true}],
+		"no-empty": [2, { "allowEmptyCatch": true }],
 		"no-empty-character-class": 2,
 		"no-ex-assign": 2,
 		"no-extra-boolean-cast": 1,
@@ -48,7 +47,7 @@
 		"no-case-declarations": 0,
 		"no-else-return": 1,
 		"no-fallthrough": 0,
-		"no-invalid-this": 0
+		"no-invalid-this": 0,
 		"no-multi-spaces": 2,
 		"no-octal": 1,
 		"no-redeclare": 2,
@@ -56,17 +55,19 @@
 		"no-with": 1,
 		"radix": [2, "as-needed"],
 		"yoda": 1,
-		"no-unused-vars": [1, {"args": "after-used"}],
-		"no-undef": [2, {"typeof": true}],"no-use-before-define": [2, {"functions": false, "classes": false}],"callback-return": 2,
-    "no-mixed-requires": 2,
+		"no-unused-vars": [1, { "args": "after-used" }],
+		"no-undef": [2, { "typeof": true }],
+		"no-use-before-define": [2, { "functions": false, "classes": false }],
+		"callback-return": 2,
+		"no-mixed-requires": 2,
 		"array-bracket-spacing": 2,
-		"brace-style": [2, "1tbs", {"allowSingleLine": true}],
+		"brace-style": [2, "1tbs", { "allowSingleLine": true }],
 		"camelcase": 1,
 		"comma-spacing": 1,
 		"comma-style": 1,
 		"eol-last": 1,
 		"indent": [2, "tab"],
-    "linebreak-style": [2, "unix"],
+		"linebreak-style": [2, "unix"],
 		"key-spacing": 1,
 		"no-lonely-if": 1,
 		"no-mixed-spaces-and-tabs": [2, "smart-tabs"],
