--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "cheerio": "0.20.0",
     "connect": "3.4.1",
     "handlebars": "^4.0.6",
+    "image-size": "^0.6.2",
     "request": "2.67.0",
     "sentiment": "1.0.5",
     "serve-static": "1.10.2",
-    "websocket": "1.0.22",
-    "thunk-redis": "1.7.3"
+    "thunk-redis": "1.7.3",
+    "valid-url": "^1.0.9",
+    "websocket": "1.0.22"
   },
   "engines": {
     "node": ">= 4.0.0"
