--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cheerio": "0.20.0",
     "connect": "3.4.1",
     "handlebars": "^4.0.6",
-    "image-size": "^0.6.2",
+    "probe-image-size": "^3.2.0",
     "request": "2.67.0",
     "sentiment": "1.0.5",
     "serve-static": "1.10.2",
