--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "kid-a",
   "version": "0.0.1",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cheerio": "0.20.0",
-    "connect": "3.4.1",
+    "body-parser": "^1.18.3",
+    "cheerio": "^0.22.0",
+    "connect": "^3.6.6",
     "handlebars": "^4.0.6",
     "probe-image-size": "^3.2.0",
-    "request": "2.67.0",
+    "request": "^2.87.0",
     "sentiment": "1.0.5",
-    "serve-static": "1.10.2",
+    "serve-static": "^1.13.2",
     "thunk-redis": "1.7.3",
     "valid-url": "^1.0.9",
-    "websocket": "1.0.22"
+    "websocket": "^1.0.26"
   },
   "engines": {
     "node": ">= 4.0.0"
