--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
 		"node": true
 	},
 	"globals": {
-		"Config": false, "toId": false, "Tools": false, "errorMsg": false, "statusMsg": false, "Handler": false, "consoleMsg": false, "output": false,
-		"stdout": false, "Connection": false, "pmMsg": false, "canUse": false, "forceQuit": false, "Commands": false, "sanitize": false, "Server": false, "ChatLogger": false
+		"Config": false, "toId": false, "Tools": false, "Output": false, "Debug": false, "Handler": false, "Utils": false,
+		"Connection": false, "canUse": false, "Commands": false, "Server": false, "ChatLogger": false
 	},
 	"parserOptions": {
 		"ecmaVersion": 8,
