--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.18.3",
     "connect": "^3.6.6",
     "handlebars": "^4.0.6",
+    "markdown": "^0.5.0",
     "probe-image-size": "^3.2.0",
     "request": "^2.87.0",
     "sentiment": "1.0.5",
