--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect": "^3.6.6",
+    "faye-websocket": "^0.11.1",
     "handlebars": "^4.0.6",
     "markdown": "^0.5.0",
+    "permessage-deflate": "^0.1.6",
     "probe-image-size": "^3.2.0",
     "request": "^2.87.0",
     "sentiment": "1.0.5",
     "serve-static": "^1.13.2",
     "thunk-redis": "1.7.3",
-    "valid-url": "^1.0.9",
-    "websocket": "^1.0.26"
+    "valid-url": "^1.0.9"
   },
   "engines": {
     "node": ">= 4.0.0"
