Update personal info

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bumbadadabum/Kid-A.git"
+    "url": "https://github.com/Asheviere/Kid-A.git"
   },
   "author": {
-    "name": "Bär Halberkamp",
-    "email": "fledaway@gmail.com"
+    "name": "Astrid Halberkamp",
+    "email": "asheviere@pokemonshowdown.com"
   },
   "private": true,
   "license": "GPL3",
